# wazo-load-stack

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  Jenkinsfile  README.md  pyproject.toml  tox.ini  zuul.yaml
wazo_load_api/: .last_image_built  Makefile  config.py  http_server.py  requirements.txt  setup.py  test-requirements.txt
wazo_load_api/docker/: Dockerfile
wazo_load_api/etc/wazo-load-api/: private.key
wazo_load_api/plugins/job/: http.py  (+2 more)
wazo_load_api/tests/: start-wlapi.sh
wazo_load_api/wlapi/: README.md  config.py  controller.py  http_server.py  main.py
wazo_load_cli/: INSTALL.md  Makefile  README.md  commands.py  requirements.txt  setup.py  test-requirements.txt  wlctl.py
wazo_load_cli/modules/: load_generator.py  utils.py
wazo_load_cli/tests/: load-wda.ini  load.ini  test_load_generator.py  test_utils.py
wazo_load_cli/wlctl/: commands.py  main.py
wazo_load_gateway/: Makefile  controller.py  http_server.py  main.py  requirements.txt
wazo_load_pilot/: .last_image_built  README.md  config.py  controller.py  docker-funcs  http_server.py  main.py  makefile  requirements.txt  setup.py  start-wlpd.sh  test-requirements.txt
wazo_load_pilot/docker/: Dockerfile  pilot.Dockerfile  pilot.Dockerfile.tmpl  sserver.Dockerfile
wazo_load_pilot/etc/: resolv.conf
wazo_load_pilot/integration_tests/: Makefile  test-requirements.txt
wazo_load_pilot/plugins/: __init__.py
wazo_load_pilot/tests/: certificate.csr  load-2.json  load.json  private.key  simple_serve.py  start-wlpd.sh
wazo_load_pilot/wlpd/: config.py  controller.py  main.py
(+84 files in other folders)
