[tool.mypy]
python_version = "3.10"
show_error_codes = true
check_untyped_defs = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true

[tool.flake8]
show-source = true
max-line-length = 99
application-import-names = ["wazo_load_cli", "wazo_load_gateway", "wazo_load_pilot"]
ignore = [
  "E203", # whitespace before ':'
  "W503", # line break before binary operator
]
exclude = [
    ".tox",
    ".eggs",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "wazo-load-stack"
version = "1.0.0"

[tool.isort]
profile = "black"
py_version = 39
